--- a/package.json
+++ b/package.json
@@ -1,67 +1,4 @@
 {
   "name": "sync-mobile",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "npx expo start",
-    "start": "npx expo start --dev-client",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "NODE_ENV=development npx expo run:android",
-    "ios": "NODE_ENV=development npx expo run:ios",
-    "web": "npx expo start --web",
-    "test": "jest --watchAll",
-    "lint": "npx expo lint",
-    "build:android-dev": "NODE_ENV=development eas build -p android  --local --profile development --output sync-dev.apk",
-    "build:android-prev": "NODE_ENV=production eas build -p android  --local --profile preview --output sync-preview.apk",
-    "build:ios": "NODE_ENV=production eas build --profile preview --platform ios",
-    "build:android-prod": "NODE_ENV=production npx expo prebuild --clean && eas build -p android --local --profile production --output sync-release.aab",
-    "build:development": "NODE_ENV=development eas build --profile development",
-    "build:submit:production": "eas build --profile production --submit",
-    "doctor": "npx expo-doctor"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.46",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.21",
-    "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
-    "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
-  },
-  "private": true,
-  "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
+  "packageManager": "yarn@4.7.0"
 }
