--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,8 +25,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: "yarn"
 
-      - name: Install Yarn
-        run: npm install -g yarn@${{ env.YARN_VERSION }}
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Set Yarn Version
+        run: corepack prepare yarn@${{ env.YARN_VERSION }} --activate
 
       - name: Install Dependencies
         run: yarn install --immutable
