--- a/app.json
+++ b/app.json
@@ -15,7 +15,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.strangee.sync"
+      "bundleIdentifier": "com.strangee.sync",
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -30,7 +33,11 @@
       "favicon": "./assets/images/sync.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      ["expo-secure-store", {
+        "configureAndroidBackup": true,
+        "faceIDPermission": "Allow $(PRODUCT_NAME) to access your Face ID biometric data."
+      }]
     ],
     "experiments": {
       "typedRoutes": true
