--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "npx expo start",
     "start": "npx expo start --dev-client",
+    "doc": "npx expo-doctor",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "NODE_ENV=development npx expo run:android",
     "ios": "NODE_ENV=development npx expo run:ios",
@@ -24,49 +25,57 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.46",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.21",
-    "expo-secure-store": "~14.0.1",
+    "expo": "^53.0.13",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.2",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.1",
+    "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.12.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.7",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "expo-updates",
+        "expo-splash-screen"
+      ]
+    }
   },
   "private": true,
   "packageManager": "yarn@1.22.22"
